[gd_scene load_steps=22 format=2]

[ext_resource path="res://Entities/Entity.gd" type="Script" id=1]
[ext_resource path="res://Components/health_bar/health_bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Components/sprite/entity_sprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/brain/brain.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/stats/stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/entity_push/entity_push.tscn" type="PackedScene" id=6]
[ext_resource path="res://Components/hitbox/hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Components/hurtbox/hurtbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Entities/chaser/plastic bottle.png" type="Texture" id=9]
[ext_resource path="res://Components/sleeper/sleeper.tscn" type="PackedScene" id=10]
[ext_resource path="res://Entities/damage.wav" type="AudioStream" id=13]
[ext_resource path="res://Components/brain/movement_lobe/movement_lobe.tscn" type="PackedScene" id=14]
[ext_resource path="res://Components/brain/memory_lobe/memory_lobe.tscn" type="PackedScene" id=15]
[ext_resource path="res://Components/sound_player/foot_stepper/foot_stepper.tscn" type="PackedScene" id=16]
[ext_resource path="res://Effects/entity_effects/entity_effects.tscn" type="PackedScene" id=18]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.03, 0.97 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("foot_stepper")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.07, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "footstep"
}, {
"args": [  ],
"method": "footstep"
} ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.17576
height = 4.00002

[sub_resource type="CircleShape2D" id=4]
radius = 6.07457

[sub_resource type="CircleShape2D" id=5]
radius = 8.71243

[node name="chaser" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
ACCELERATION = 60
SLOWDOWN = 200
TOP_SPEED = 40
FORCE_MULT = 1.25
truName = "chaser"
faction = "monster"

[node name="stats" parent="." instance=ExtResource( 5 )]
MAX_HEALTH = 2
HEALTH = 2

[node name="sprite" parent="." instance=ExtResource( 3 )]
material = SubResource( 1 )
position = Vector2( 0, -8 )
scale = Vector2( 1.02793, 0.972074 )
texture = ExtResource( 9 )
hframes = 8
vframes = 5
shadow_offset = Vector2( 0, 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "speed"
anims/RESET = SubResource( 6 )
anims/speed = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="hitbox" parent="." instance=ExtResource( 7 )]
visible = false
COOLDOWN = 0.6
TEAM_ATTACK = false
CLANKS = false
TRIGGERED_SOUND = ExtResource( 13 )

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2( 0, 2.05111 )
shape = SubResource( 4 )

[node name="hurtbox" parent="." instance=ExtResource( 8 )]
visible = false

[node name="CollisionShape2D" parent="hurtbox" index="0"]
self_modulate = Color( 0.968627, 0.909804, 0.054902, 1 )
shape = SubResource( 5 )

[node name="entityPush" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="entityPush" index="0"]
position = Vector2( 0, 6.02912 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="brain" parent="." instance=ExtResource( 4 )]

[node name="movement_lobe" parent="brain" instance=ExtResource( 14 )]
SMART_SLOWDOWN = false
MOVEMENT_EFFICIENCY = 8
general_springs = {
"friendly": "",
"hostile": "default_spring",
"neutral": ""
}

[node name="memory_lobe" parent="brain" instance=ExtResource( 15 )]

[node name="sleeper" parent="." instance=ExtResource( 10 )]
visible = false

[node name="healthBar" parent="." instance=ExtResource( 2 )]
margin_left = -10.4298
margin_top = -11.7557
margin_right = 10.5702
margin_bottom = -7.75391

[node name="entity_effects" parent="." instance=ExtResource( 18 )]
death_type = 5
block_effect = false

[node name="foot_stepper" parent="." instance=ExtResource( 16 )]
RATE = 0.0
OFFSET = 0.0
CONSTANT_RATE = true
VOLUME_ADJUST = 0.0

[editable path="hitbox"]
[editable path="hurtbox"]
[editable path="entityPush"]
