[gd_scene load_steps=12 format=2]

[ext_resource path="res://Entities/Entity.gd" type="Script" id=1]
[ext_resource path="res://Components/hitbox/hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/spikes/spike_base.png" type="Texture" id=3]
[ext_resource path="res://Components/stats/stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/sound_player/sound_player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/sound_player/sound/sound.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/spikes/spike_rise.wav" type="AudioStream" id=7]
[ext_resource path="res://Entities/spikes/spike_pokey.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.5, 6 )

[sub_resource type="Animation" id=2]
resource_local_to_scene = true
resource_name = "spikes"
length = 4.0
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("sound_player")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "sound" ],
"method": "play_sound"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pokey:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.01667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pokey:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.0166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 7 )

[node name="spikes" type="KinematicBody2D"]
process_priority = 100
script = ExtResource( 1 )
STATIC = true
ACCELERATION = 0
SLOWDOWN = 250
TOP_SPEED = 160
INANIMATE = true
truName = "spikes"

[node name="stats" parent="." instance=ExtResource( 4 )]
TRUE_DAMAGE = 2

[node name="base" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 3 )

[node name="pokey" type="Sprite" parent="."]
visible = false
position = Vector2( 0.5, -3 )
texture = ExtResource( 8 )
offset = Vector2( -0.5, 3 )
hframes = 2
frame = 1

[node name="hitbox" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.9, 0.9 )
COOLDOWN = 0.4
iTime = 0.4
MULTIHITS = false
KNOCKBACK = 50
CLANKS = false

[node name="CollisionShape2D" parent="hitbox" index="0"]
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spikes"
anims/spikes = SubResource( 2 )

[node name="sound_player" parent="." instance=ExtResource( 5 )]

[node name="sound" parent="sound_player" instance=ExtResource( 6 )]
stream = SubResource( 3 )
volume_db = -0.2
bus = "Master"
MODE = 1
AUTO_PLAY = false

[editable path="hitbox"]
